--- a/project/interactive-rating.html
+++ b/project/interactive-rating.html
@@ -7,11 +7,12 @@
   </head>
   <body>
     <h1>Holaaaa</h1>
-    <div id="rating-1">1</div>
-    <div id="rating-2">2</div>
-    <div id="rating-3">3</div>
-    <div id="rating-4">4</div>
-    <div id="rating-5">5</div>
+    <div id="rating1">1</div>
+    <div id="rating2">2</div>
+    <div id="rating3">3</div>
+    <div id="rating4">4</div>
+    <div id="rating5">5</div>
+    <button id="submitBtn" type="submit">Submit</button>
     <script src="main.js"></script>
   </body>
 </html>
